# apache-airflow-provider-ovhcloud-ai

./: .gitignore  AUTHORS  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  MAINTAINERS  MANIFEST.in  README.md  pyproject.toml  setup.py  zensical.toml
.github/workflows/: docs.yml
apache_airflow_provider_ovhcloud_ai/: __init__.py
apache_airflow_provider_ovhcloud_ai/hooks/: __init__.py  ai_endpoints.py  ai_training.py
apache_airflow_provider_ovhcloud_ai/operators/: __init__.py  ai_endpoints.py  ai_training.py
docs/: ai-endpoints.md  ai-training.md  api-reference.md  getting-started.md  index.md
tests/hooks/: test_ai_endpoints_hook.py  test_ai_training_hook.py
tests/operators/: test_ai_endpoints_operators.py  test_ai_training_operators.py
